--- a/template/index.html
+++ b/template/index.html
@@ -80,10 +80,18 @@
 
 					<!-- Define search bar  -->
 					<form action="/search" class="search">
-						<label for="search-query" class="visually-hidden">Search</label>
+						<label for="search-query" class="visually-hidden" >Search</label>
 						<input type="search" id="search-query" placeholder="Search for products" aria-label="Search"
-							name="query" required>
-						<button type="submit">Search</button>
+							name="query" required style="margin: 0;font-family: inherit;font-size: inherit;
+							padding: 5px 15px;
+							line-height: inherit;
+							border-radius: 7px;
+							background: #ddefe1;">
+						<button type="submit" style="margin: 0;font-family: inherit;font-size: inherit;
+						padding: 5px 15px;
+						line-height: inherit;
+						border-radius: 7px;
+						background: #ddefe1;">Search</button>
 					</form>
 
 				</ul>
