--- a/template/cart.html
+++ b/template/cart.html
@@ -237,7 +237,7 @@
 
 							<div class="row">
 								<div class="col-md-12">
-									<a href="/checKout">
+									<a href="/checkout">
 										<button class="btn btn-black btn-lg py-3 btn-block">Proceed To Checkout</button>
 									</a>
 								</div>
