--- a/template/payment.html
+++ b/template/payment.html
@@ -123,7 +123,7 @@
 
     <div class="text-center mx-auto">
         <form action="/thankyou/" method="post">
-            <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_UkmXzU0ru6Xnon" // Enter the
+            <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_bHGARzasqPyY7j" // Enter the
                 Test API Key ID generated from Dashboard → Settings → API Keys data-amount="{{payments.amount}}" //
                 Amount is in currency subunits. Hence, 29935 refers to 29935 paise or ₹299.35. data-currency="INR" //
                 You can accept international payments by changing the currency code. Contact our Support Team to enable
