Change template Images Path

--- a/template/index.html
+++ b/template/index.html
@@ -80,7 +80,7 @@
 
 					<!-- Define search bar  -->
 					<form action="/search" class="search">
-						<label for="search-query" class="visually-hidden" >Search</label>
+						<label for="search-query" class="visually-hidden">Search</label>
 						<input type="search" id="search-query" placeholder="Search for products" aria-label="Search"
 							name="query" required style="margin: 0;font-family: inherit;font-size: inherit;
 							padding: 5px 15px;
@@ -381,7 +381,7 @@
 
 											<div class="author-info">
 												<div class="author-pic">
-													<img src="/static/images/person-1.png" alt="Maria Jones"
+													<img src="/static/images/person_2.jpg" alt="Maria Jones"
 														class="img-fluid">
 												</div>
 												<h3 class="font-weight-bold">Maria Jones</h3>
@@ -410,7 +410,7 @@
 
 											<div class="author-info">
 												<div class="author-pic">
-													<img src="/static/images/person-1.png" alt="Maria Jones"
+													<img src="/static/images/person_3.jpg" alt="Maria Jones"
 														class="img-fluid">
 												</div>
 												<h3 class="font-weight-bold">Maria Jones</h3>
