--- a/template/orders.html
+++ b/template/orders.html
@@ -1,166 +1,97 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
+<!-- Inheritance base.html -->
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Untree.co">
-    <link rel="shortcut icon" href="/template/favicon.png">
+<!-- Start Nab-Bar Section -->
+{% block navbar %}
+{{ block.super }}
+{% endblock %}
+<!-- End Nab-Bar Section -->
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
-
-    <!-- Bootstrap CSS -->
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="{% static '/css/tiny-slider.css' %}" rel="stylesheet">
-    <link href="{% static '/css/style.css' %}" rel="stylesheet">
-    <title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
-
-    <!-- logout and order section css  -->
-    <style>
-        .dropdown:hover .dropdown-menu {
-            display: block;
-        }
-
-        .dropdown-menu {
-            background-color: #3b5d50;
-            /* Change to your preferred color */
-        }
-
-        .dropdown-item {
-            color: white;
-            /* Change text color to match the new background color */
-        }
-
-        .dropdown-item:hover {
-            background-color: #3b5d50;
-            /* Change hover color */
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- Start Header/Navigation -->
-    <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Furni<span>.</span></a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
-                aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsFurni">
-                <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li><a class="nav-link" href="/shop">Shop</a></li>
-                    <li><a class="nav-link" href="/about">About us</a></li>
-                    <li><a class="nav-link" href="/services">Services</a></li>
-                    <li><a class="nav-link" href="/blog">Blog</a></li>
-                    <li><a class="nav-link" href="/contact">Contact us</a></li>
-                </ul>
-
-                <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-                    <li><a class="nav-link" href="/signup"><img src="/static/images/user.svg"></a></li>
-                    <li><a class="nav-link" href="/cart">{{totalItem}}<img src="/static/images/cart.svg"></a></li>
-                </ul>
-            </div>
-        </div>
-
-    </nav>
-    <!-- End Header/Navigation -->
-
-    <!-- Start Hero Section -->
-    <div class="hero">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-lg-5">
-                    <div class="intro-excerpt">
-                        <h1>Order Details</h1>
-                        <p class="mb-4">All Product Show For Shoping Item. Product quality is best Material And All
-                            Product Are Made in india
-                        </p>
-                        <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
-                                class="btn btn-white-outline">Explore</a></p>
-                    </div>
+{% block extra_head %}
+<!-- Start Hero Section -->
+<div class="hero">
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-lg-5">
+                <div class="intro-excerpt">
+                    <h1>Order Details</h1>
+                    <p class="mb-4">All Product Show For Shoping Item. Product quality is best Material And All
+                        Product Are Made in india
+                    </p>
+                    <p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
+                            class="btn btn-white-outline">Explore</a></p>
                 </div>
-                <div class="col-lg-7">
-                    <div class="hero-img-wrap">
-                        <img src="/static/images/couch.png" class="img-fluid">
-                    </div>
+            </div>
+            <div class="col-lg-7">
+                <div class="hero-img-wrap">
+                    <img src="/static/images/couch.png" class="img-fluid">
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Hero Section -->
+</div>
+<!-- End Hero Section -->
 
 
 
-    <div class="untree_co-section before-footer-section">
-        <div class="container">
-            <div class="row mb-5">
-                <form class="col-md-12">
-                    <div class="site-blocks-table">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th class="product-price">Sr no.</th>
-                                    <th class="product-thumbnail">Image</th>
-                                    <th class="product-name">Product Name</th>
-                                    <th class="product-price">Order Date</th>
-                                    <th class="product-price">Price</th>
-                                    <th class="product-quantity">Quantity</th>
-                                    <th class="product-price">status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in order%}
-                                <tr>
-                                    <td class="">{{forloop.counter}}</td>
-                                    <td class="product-thumbnail">
-                                        <img src="{{item.image.url}}" alt="Image" class="img-fluid">
-                                    </td>
+<div class="untree_co-section before-footer-section">
+    <div class="container">
+        <div class="row mb-5">
+            <form class="col-md-12">
+                <div class="site-blocks-table">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="product-price">Sr no.</th>
+                                <th class="product-thumbnail">Image</th>
+                                <th class="product-name">Product Name</th>
+                                <th class="product-price">Order Date</th>
+                                <th class="product-price">Price</th>
+                                <th class="product-quantity">Quantity</th>
+                                <th class="product-price">status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in order%}
+                            <tr>
+                                <td class="">{{forloop.counter}}</td>
+                                <td class="product-thumbnail">
+                                    <img src="{{item.image.url}}" alt="Image" class="img-fluid">
+                                </td>
 
-                                    <td>
-                                        {{item.product_name}}
-                                    </td>
+                                <td>
+                                    {{item.product_name}}
+                                </td>
 
-                                    <td>
-                                        {{item.order_date}}
-                                    </td>
+                                <td>
+                                    {{item.order_date}}
+                                </td>
 
-                                    <td>
-                                        ${{item.price}}
-                                    </td>
+                                <td>
+                                    ${{item.price}}
+                                </td>
 
-                                    <td>
-                                        {{item.quantity}}
-                                    </td>
+                                <td>
+                                    {{item.quantity}}
+                                </td>
 
-                                    <td>
-                                        {{item.status}}
-                                    </td>
+                                <td>
+                                    {{item.status}}
+                                </td>
 
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </form>
-            </div>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </form>
         </div>
     </div>
+</div>
+{% endblock %}
 
-
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/tiny-slider.js"></script>
-    <script src="/static/js/custom.js"></script>
-</body>
-
-</html>
+<!-- Start Footer Section -->
+{% block extra_footer %}
+{{ block.super }}
+{% endblock %}
+<!-- End Footer Section -->
