--- a/template/payment.html
+++ b/template/payment.html
@@ -1,260 +1,105 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
+<!-- Inheritance base.html -->
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Untree.co">
-    <link rel="shortcut icon" href="/template/favicon.png">
+<!-- Start Nab-Bar Section -->
+{% block navbar %}
+{{ block.super }}
+{% endblock %}
+<!-- End Nab-Bar Section -->
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
-
-    <!-- Bootstrap CSS -->
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="{% static '/css/tiny-slider.css' %}" rel="stylesheet">
-    <link href="{% static '/css/style.css' %}" rel="stylesheet">
-    <title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
-</head>
-
-<body>
-
-    <!-- Start Header/Navigation -->
-    <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Furni<span>.</span></a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
-                aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsFurni">
-                <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li><a class="nav-link" href="/shop">Shop</a></li>
-                    <li><a class="nav-link" href="/about">About us</a></li>
-                    <li><a class="nav-link" href="/services">Services</a></li>
-                    <li><a class="nav-link" href="/blog">Blog</a></li>
-                    <li><a class="nav-link" href="/contact">Contact us</a></li>
-                </ul>
-
-                <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-                    <li><a class="nav-link" href="/signup"><img src="/static/images/user.svg"></a></li>
-                    <li><a class="nav-link" href="/cart"><img src="/static/images/cart.svg"></a></li>
-                </ul>
-            </div>
-        </div>
-
-    </nav>
-    <!-- End Header/Navigation -->
-
-    <!-- Start Hero Section -->
-    <div class="hero">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-lg-5">
-                    <div class="intro-excerpt">
-                        <h1>Payment</h1>
-                    </div>
+{% block extra_head %}
+<!-- Start Hero Section -->
+<div class="hero">
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-lg-5">
+                <div class="intro-excerpt">
+                    <h1>Payment Process<span clsas="d-block"></span></h1>
+                    <p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+                        vulputate velit imperdiet dolor tempor tristique.</p>
+                    <p><a href="#" class="btn btn-secondary me-2">Shop Now</a><a href="#"
+                            class="btn btn-white-outline">Explore</a></p>
                 </div>
-                <div class="col-lg-7">
-
+            </div>
+            <div class="col-lg-7">
+                <div class="hero-img-wrap">
+                    <img src="/static/images/couch.png" class="img-fluid">
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Hero Section -->
+</div>
+<!-- End Hero Section -->
 
-    <div class="untree_co-section">
-        <div class="container">
-            <div class="row">
-                <!-- Cart Total and Payment Form Side by Side -->
-                <div class="col-lg-6">
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <span class="text-black">Subtotal</span>
-                        </div>
-
-                        <div class="col-md-6 text-right">
-                            <strong class="text-black">${% if grand_total %} {{grand_total}} {% endif %}</strong>
-                        </div>
+<div class="untree_co-section">
+    <div class="container">
+        <div class="row">
+            <!-- Cart Total and Payment Form Side by Side -->
+            <div class="col-lg-6">
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <span class="text-black">Subtotal</span>
                     </div>
-                    <div class="row mb-5">
-                        <div class="col-md-6">
-                            <span class="text-black">Total</span>
-                        </div>
-                        <div class="col-md-6 text-right">
-                            <strong class="text-black">${% if grand_total %} {{grand_total}} {% endif %}</strong>
-                        </div>
+
+                    <div class="col-md-6 text-right">
+                        <strong class="text-black">${% if grand_total %} {{grand_total}} {% endif %}</strong>
                     </div>
                 </div>
-
-                <div class="col-lg-6">
-                    <div class="row mb-3">
-                        <div class="col-12">
-                            <form action="/payment-cart/" method="post">
-                                {% csrf_token %}
-
-                                <div class="mb-3">
-                                    <label for="amount" class="form-label">Enter amount</label>
-                                    <input type="number" name="amount" class="form-control" id="amount">
-                                </div>
-                                <button type="submit" style="background: green; border-radius: 10px;"
-                                    class="btn btn-Success">Submit</button>
-
-                            </form>
-                        </div>
+                <div class="row mb-5">
+                    <div class="col-md-6">
+                        <span class="text-black">Total</span>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <strong class="text-black">${% if grand_total %} {{grand_total}} {% endif %}</strong>
                     </div>
                 </div>
-
-            </div>
-        </div>
-    </div>
-
-
-
-    {% if payments %}
-
-    <div class="text-center mx-auto">
-        <form action="/thankyou/" method="post">
-            <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_bHGARzasqPyY7j" // Enter the
-                Test API Key ID generated from Dashboard → Settings → API Keys data-amount="{{payments.amount}}" //
-                Amount is in currency subunits. Hence, 29935 refers to 29935 paise or ₹299.35. data-currency="INR" //
-                You can accept international payments by changing the currency code. Contact our Support Team to enable
-                International for your account data-order_id="{{payments.id}}" // Replace with the order_id generated by
-                you in the backend. data-buttontext="Pay with Razorpay" data-name="Paymentcart Corp"
-                data-description="A Wild Sheep Chase is the third novel by Japanese author Haruki Murakami"
-                data-image="https://example.com/your_logo.jpg" data-prefill.name="Gaurav Kumar"
-                data-prefill.email="gaurav.kumar@example.com" data-theme.color="#F37254"></script>
-            <input type="hidden" custom="Hidden Element" name="hidden" />
-        </form>
-    </div>
-    {% endif %}
-
-
-    <!-- Start Footer Section -->
-    <footer class="footer-section">
-        <div class="container relative">
-
-            <div class="sofa-img">
-                <img src="/static/images/sofa.png" alt="Image" class="img-fluid">
             </div>
 
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="subscription-form">
-                        <h3 class="d-flex align-items-center"><span class="me-1"><img
-                                    src="/static/images/envelope-outline.svg" alt="Image"
-                                    class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
+            <div class="col-lg-6">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <form action="/payment-cart/" method="post">
+                            {% csrf_token %}
 
-                        <form action="#" class="row g-3">
-                            <div class="col-auto">
-                                <input type="text" class="form-control" placeholder="Enter your name">
+                            <div class="mb-3">
+                                <label for="amount" class="form-label">Enter amount</label>
+                                <input type="number" name="amount" class="form-control" id="amount">
                             </div>
-                            <div class="col-auto">
-                                <input type="email" class="form-control" placeholder="Enter your email">
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn btn-primary">
-                                    <span class="fa fa-paper-plane"></span>
-                                </button>
-                            </div>
+                            <button type="submit" style="background: green; border-radius: 10px;"
+                                class="btn btn-Success">Submit</button>
+
+                        </form>
                     </div>
-
-                </div>
-            </div>
-
-            <div class="row g-5 mb-5">
-                <div class="col-lg-4">
-                    <div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Furni<span>.</span></a></div>
-                    <p class="mb-4">Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl
-                        dapibus
-                        malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor
-                        tristique.
-                        Pellentesque habitant</p>
-
-                    <ul class="list-unstyled custom-social">
-                        <li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-                        <li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-8">
-                    <div class="row links-wrap">
-                        <div class="col-6 col-sm-6 col-md-3">
-                            <ul class="list-unstyled">
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact us</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-3">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Support</a></li>
-                                <li><a href="#">Knowledge base</a></li>
-                                <li><a href="#">Live chat</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-3">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Jobs</a></li>
-                                <li><a href="#">Our team</a></li>
-                                <li><a href="#">Leadership</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-6 col-sm-6 col-md-3">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Nordic Chair</a></li>
-                                <li><a href="#">Kruzo Aero</a></li>
-                                <li><a href="#">Ergonomic Chair</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="border-top copyright">
-                <div class="row pt-4">
-                    <div class="col-lg-6">
-                        <p class="mb-2 text-center text-lg-start">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash;
-                            Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a
-                                href="https://themewagon.com">ThemeWagon</a>
-                            <!-- License information: https://untree.co/license/ -->
-                        </p>
-                    </div>
-
-                    <div class="col-lg-6 text-center text-lg-end">
-                        <ul class="list-unstyled d-inline-flex ms-auto">
-                            <li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                    </div>
-
                 </div>
             </div>
 
         </div>
-    </footer>
-    <!-- End Footer Section -->
+    </div>
+</div>
 
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/tiny-slider.js"></script>
-    <script src="/static/js/custom.js"></script>
-</body>
 
-</html>
+
+{% if payments %}
+
+<div class="text-center mx-auto">
+    <form action="/thankyou/" method="post">
+        <script src="https://checkout.razorpay.com/v1/checkout.js" data-key="rzp_test_3OUe88CHwcmGfg" // Enter the Test
+            API Key ID generated from Dashboard → Settings → API Keys data-amount="{{payments.amount}}" // Amount is in
+            currency subunits. Hence, 29935 refers to 29935 paise or ₹299.35. data-currency="INR" // You can accept
+            international payments by changing the currency code. Contact our Support Team to enable International for
+            your account data-order_id="{{payments.id}}" // Replace with the order_id generated by you in the backend.
+            data-buttontext="Pay with Razorpay" data-name="Paymentcart Corp"
+            data-description="A Wild Sheep Chase is the third novel by Japanese author Haruki Murakami"
+            data-image="https://example.com/your_logo.jpg" data-prefill.name="Gaurav Kumar"
+            data-prefill.email="gaurav.kumar@example.com" data-theme.color="#F37254"></script>
+        <input type="hidden" custom="Hidden Element" name="hidden" />
+    </form>
+</div>
+{% endif %}
+{% endblock %}
+
+<!-- Start Footer Section -->
+{% block extra_footer %}
+{{ block.super }}
+{% endblock %}
+<!-- End Footer Section -->
